--- a/wp-content/themes/buzz-child/assets/scss/style.scss
+++ b/wp-content/themes/buzz-child/assets/scss/style.scss
@@ -238,6 +238,20 @@ body {
 				margin-top: 20px;
 				padding-left: 25px;
 				display: none;
+
+				img,
+				figure {
+					max-width: 185px;
+				}
+
+				figure {
+					.wp-caption-text {
+						margin-top: 5px;
+						line-height: normal;
+						font-style: italic;
+						font-size: 0.8em;
+					}
+				}
 			}
 
 			&.active {
