--- a/wp-content/themes/buzz-child/assets/scss/rtl.scss
+++ b/wp-content/themes/buzz-child/assets/scss/rtl.scss
@@ -173,6 +173,29 @@
 	}
 }
 
+/************/
+/* timeline */
+/************/
+
+.timezones-wrapper {
+	ul {
+		li {
+			float: right;
+		}
+
+		&.sub-timezones {
+			li {
+				&:before {
+					left: auto;
+					right: 0;
+					border-left: 0;
+					border-right: 7px solid #FFF;
+				}
+			}
+		}
+	}
+}
+
 /**********/
 /* footer */
 /**********/
